--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,25 @@
 sudo: required
+
 services:
   - docker
 
 before_install:
   - docker build -t yuka/docker-react -f Dockerfile.dev .
+
 scripts:
   - docker run -e CI=true yuka/docker-react npm run test
+
 language:
   generic
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-019771814969"
+  bucket_path:  "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
